# FSIV

DoG/: CMakeLists.txt  DoG  dog.cpp
cv_tutorial/: prg4.cpp
final-project/detector/: CMakeLists.txt  hard_negative_mining.cpp  lbp.cpp  lbp.h  test_detector.cpp  test_detector_dataset.txt  traintest.cpp
final-project/fsivdet/: CMakeLists.txt  common_code.cpp  common_code.hpp  lbp.cpp  lbp.h  traintest.cpp
p1/: CMakeLists.txt  p1.cpp
p1/cv_tutorial/: p1.cpp  prg1.cpp  prg2.cpp  prg3.cpp  prg4.cpp  prg5.cpp
p2/: CMakeLists.txt  p2.cpp
practical-assignments/task-0/: CMakeLists.txt
practical-assignments/task-1/: CMakeLists.txt
practical-assignments/task-2/: task2.cpp
practical-assignments/task-5/: CMakeLists.txt  lbp.cpp  lbp.h  test_lbp.cpp
task-1/: task1.cpp
task-2/: CMakeLists.txt  task2.cpp
task-3/: CMakeLists.txt  main.cpp  task3.cpp  task3.hpp
task-4/: CMakeLists.txt  main.cpp
task-5/: lbp.cpp  lbp.h  test_lbp.cpp
tutorial-examples/MachineLearningExample/: CMakeLists.txt
tutorial-examples/bits_samples/: CMakeLists.txt  bits.cpp  parsing.cpp
tutorial-examples/cannyExample/: CMakeLists.txt
tutorial-examples/cv_tutorial/: CMakeLists.txt
tutorial-examples/lukas-kanade-example/: CMakeLists.txt  lukas-kanade.cpp
